feat: generate base workflows
